package com.paulvickers.fit4life.utils

object TestTags {

    const val FLOATING_BUTTON = "FLOATING_BUTTON"
    const val WORKOUT_TITLE_TEXT_FIELD = "WORKOUT_TITLE_TEXT_FIELD"
}